Fix trailer video not showing and error message

--- a/react-app/src/Components/UI/Background.module.css
+++ b/react-app/src/Components/UI/Background.module.css
@@ -6,6 +6,21 @@
   transition: ease;
 }
 
+.image-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  padding: 1rem;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.image-overlay:hover {
+  opacity: 1;
+}
+
 .background {
   width: 100%;
   object-fit: cover;
